# m2_engage_back

./: .env  Procfile  db.sqlite3  main.py  pyproject.toml  requirements.txt
analytics/: services.py  urls.py  views.py
campaigns/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
campaigns/migrations/: 0001_initial.py
clients/: admin.py  filters.py  models.py  serializers.py  views.py
clients/management/commands/: seed_data.py
clients/migrations/: 0001_initial.py
core/: celery.py  settings.py  urls.py
marketing/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
marketing/migrations/: 0001_initial.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py
sales/: admin.py  models.py  serializers.py  urls.py  views.py
sales/migrations/: 0001_initial.py
segments/: admin.py  models.py  serializers.py  urls.py  views.py
segments/migrations/: 0001_initial.py  0002_segment_updated_at.py
